--- a/webbooks/src/main/resources/application.properties
+++ b/webbooks/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 DB.driver=org.postgresql.Driver
-DB.url=jdbc:postgresql://localhost:5432/db_webbooks
-DB.user=postgres
-DB.password=password
+DB.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:webbooks}
+DB.user=${DB_USER:postgres}
+DB.password=${DB_PASSWORD:password}
