--- a/infra/k8s/webbooks/templates/service.yaml
+++ b/infra/k8s/webbooks/templates/service.yaml
@@ -1,7 +1,7 @@
 # infra/k8s/webbooks/templates/service.yaml
 apiVersion: v1
 kind: Service
-meta
+metadata:
   name: webbooks
 spec:
   type: {{ .Values.service.type }}
