--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -79,23 +79,24 @@ jobs:
         run: |
           helm upgrade --install webbooks ./infra/k8s/webbooks \
             --set image.tag=${{ github.sha }}
-
-      - name: Wait for IP and notify
-        id: notify
+      
+      - name: Wait for LoadBalancer IP
+        id: get_ip
         run: |
-          echo "Waiting for LoadBalancer IP..."
-          for i in {1..30}; do
-            IP=$(kubectl get svc webbooks -o jsonpath='{.status.loadBalancer.ingress[0].ip}' 2>/dev/null)
-            if [ -n "$IP" ] && [ "$IP" != "<none>" ]; then
-              echo "IP=$IP" >> $GITHUB_ENV
-              break
-            fi
-            sleep 10
-          done
-          if [ -z "$IP" ]; then
-            echo "Failed to get IP"
-            exit 1
-          fi
+         echo "Waiting for LoadBalancer IP..."
+         for i in {1..30}; do
+          IP=$(kubectl get svc webbooks -o jsonpath='{.status.loadBalancer.ingress[0].ip}' 2>/dev/null || echo "")
+          if [[ -n "$IP" && "$IP" != "<none>" && "$IP" != "null" ]]; then
+           echo "IP=$IP" >> $GITHUB_ENV
+           echo "✅ Public IP: $IP"
+           exit 0
+         fi
+         echo "Attempt $i: IP not ready yet..."
+         sleep 10
+         done
+         echo "❌ Timeout: LoadBalancer IP not assigned"
+         kubectl get svc webbooks -o yaml  # для отладки
+         exit 1
 
           MSG="✅ WebBooks deployed!\\n🌐 http://$IP:8080\\n🔖 Commit: ${{ github.sha }}"
           curl -s -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" \
