--- a/infra/k8s/webbooks/templates/initdb-configmap.yaml
+++ b/infra/k8s/webbooks/templates/initdb-configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ConfigMap
-meta
+metadata:
   name: webbooks-initdb
 data:
   init.sql: |
@@ -28,15 +28,12 @@ data:
     VALUES
       ('Книга 1', 'AVAILABLE', 1, 1, 2020, 'Описание книги 1'),
       ('Книга 2', 'BORROWED', 2, 2, 2021, 'Описание книги 2');1~
-
-
-
-ccxcxcapiVersion: v1
-kind: ConfigMap
-meta
-  name: webbooks-initdb
-data:
-  init.sql: |
+  apiVersion: v1
+  kind: ConfigMap
+  metadata:
+   name: webbooks-initdb
+   data:
+   init.sql: |
     CREATE TABLE IF NOT EXISTS genres (
         id SERIAL PRIMARY KEY,
         name VARCHAR(255) NOT NULL
@@ -61,3 +58,4 @@ data:
     VALUES
       ('Книга 1', 'AVAILABLE', 1, 1, 2020, 'Описание книги 1'),
       ('Книга 2', 'BORROWED', 2, 2, 2021, 'Описание книги 2');
+
