--- a/infra/k8s/webbooks/templates/initdb-configmap.yaml
+++ b/infra/k8s/webbooks/templates/initdb-configmap.yaml
@@ -1,6 +1,7 @@
+# infra/k8s/webbooks/templates/initdb-configmap.yaml
 apiVersion: v1
 kind: ConfigMap
-metadata:
+meta:
   name: webbooks-initdb
 data:
   init.sql: |
@@ -21,41 +22,10 @@ data:
         year INTEGER,
         description TEXT
     );
-    -- Демо-данные
-    INSERT INTO genres (name) VALUES ('Фантастика'), ('Детектив');
-    INSERT INTO authors (name) VALUES ('Иванов И.И.'), ('Петров П.П.');
-    INSERT INTO books (name, status, genre_id, author_id, year, description)
-    VALUES
-      ('Книга 1', 'AVAILABLE', 1, 1, 2020, 'Описание книги 1'),
-      ('Книга 2', 'BORROWED', 2, 2, 2021, 'Описание книги 2');1~
-  apiVersion: v1
-  kind: ConfigMap
-  metadata:
-   name: webbooks-initdb
-   data:
-   init.sql: |
-    CREATE TABLE IF NOT EXISTS genres (
-        id SERIAL PRIMARY KEY,
-        name VARCHAR(255) NOT NULL
-    );
-    CREATE TABLE IF NOT EXISTS authors (
-        id SERIAL PRIMARY KEY,
-        name VARCHAR(255) NOT NULL
-    );
-    CREATE TABLE IF NOT EXISTS books (
-        id SERIAL PRIMARY KEY,
-        name VARCHAR(255) NOT NULL,
-        status VARCHAR(50),
-        genre_id INTEGER REFERENCES genres(id),
-        author_id INTEGER REFERENCES authors(id),
-        year INTEGER,
-        description TEXT
-    );
-    -- Демо-данные
+
     INSERT INTO genres (name) VALUES ('Фантастика'), ('Детектив');
     INSERT INTO authors (name) VALUES ('Иванов И.И.'), ('Петров П.П.');
     INSERT INTO books (name, status, genre_id, author_id, year, description)
     VALUES
       ('Книга 1', 'AVAILABLE', 1, 1, 2020, 'Описание книги 1'),
       ('Книга 2', 'BORROWED', 2, 2, 2021, 'Описание книги 2');
-
