--- a/webbooks/src/main/resources/application.properties
+++ b/webbooks/src/main/resources/application.properties
@@ -1,4 +1,9 @@
-DB.driver=org.postgresql.Driver
-DB.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:webbooks}
-DB.user=${DB_USER:postgres}
-DB.password=${DB_PASSWORD:password}
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:webbooks}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASSWORD:password}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Необязательно, но рекомендуется для отладки:
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
