--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -68,16 +68,18 @@ jobs:
         run: |
           curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
 
-      - name: Deploy PostgreSQL
+      - name: Deploy PostgreSQL from Bitnami Legacy (OCI)
         run: |
-         helm upgrade --install webbooks-db bitnami/postgresql \
-           --set auth.postgresPassword=secretpassword \
-           --set auth.database=webbooks \
-           --set initdbScriptsConfigMap=webbooks-initdb \
-           --set image.repository=bitnamilegacy/postgresql \
-           --set image.tag=16.3.0-debian-12-r6 \
-           --set volumePermissions.image.repository=bitnamilegacy/os-shell \
-           --set global.security.allowInsecureImages=true
+          helm upgrade --install webbooks-db oci://registry-1.docker.io/bitnamicharts/postgresql \
+            --version 16.3.0 \
+            --set auth.postgresPassword=secretpassword \
+            --set auth.database=webbooks \
+            --set initdbScriptsConfigMap=webbooks-initdb \
+            --set image.repository=bitnamilegacy/postgresql \
+            --set image.tag=16.3.0-debian-12-r6 \
+            --set volumePermissions.image.repository=bitnamilegacy/os-shell \
+            --set metrics.image.repository=bitnamilegacy/postgres-exporter \
+            --set global.security.allowInsecureImages=true
 
       - name: Wait for PostgreSQL to be ready
         run: |
