--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -70,11 +70,13 @@ jobs:
 
       - name: Deploy PostgreSQL
         run: |
-          helm repo add bitnami https://charts.bitnami.com/bitnami
-          helm upgrade --install webbooks-db bitnami/postgresql \
-            --set auth.postgresPassword=secretpassword \
-            --set auth.database=webbooks \
-            --set auth.username=postgres
+         helm upgrade --install webbooks-db oci://registry-1.docker.io/bitnamicharts/postgresql \
+          --set auth.postgresPassword=secretpassword \
+          --set auth.database=webbooks \
+          --set initdbScriptsConfigMap=webbooks-initdb \
+          --set image.repository=bitnami/postgresql \
+          --set image.tag=latest \
+          --set global.security.allowInsecureImages=true
 
       - name: Wait for PostgreSQL to be ready
         run: |
