--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -88,24 +88,24 @@ jobs:
           helm upgrade --install webbooks ./infra/k8s/webbooks \
             --set image.tag=${{ github.sha }}
       
-      - name: Wait for LoadBalancer IP
-        id: get_ip
+      - name: Wait for LoadBalancer IP and notify
+        env:
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-         echo "Waiting for LoadBalancer IP..."
-         for i in {1..30}; do
-          IP=$(kubectl get svc webbooks -o jsonpath='{.status.loadBalancer.ingress[0].ip}' 2>/dev/null || echo "")
-          if [[ -n "$IP" && "$IP" != "<none>" && "$IP" != "null" ]]; then
-           echo "IP=$IP" >> $GITHUB_ENV
-           echo "✅ Public IP: $IP"
-           exit 0
-         fi
-         echo "Attempt $i: IP not ready yet..."
-         sleep 10
-         done
-         echo "❌ Timeout: LoadBalancer IP not assigned"
-         kubectl get svc webbooks -o yaml  # для отладки
-         exit 1
-
-          MSG="✅ WebBooks deployed!\\n🌐 http://$IP:8080\\n🔖 Commit: ${{ github.sha }}"
-          curl -s -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" \
-            -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}&text=${MSG}&parse_mode=Markdown"
+          echo "Ожидание публичного IP LoadBalancer..."
+          for i in {1..30}; do
+            IP=$(kubectl get svc webbooks -o jsonpath='{.status.loadBalancer.ingress[0].ip}' 2>/dev/null)
+            if [ -n "$IP" ] && [ "$IP" != "<none>" ]; then
+              echo "IP=$IP" >> $GITHUB_ENV
+              MSG="✅ WebBooks успешно развернуто!\\n🌐 http://$IP:8080\\n🔖 Коммит: ${{ github.sha }}"
+              curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
+                -d "chat_id=${TELEGRAM_CHAT_ID}&text=${MSG}&parse_mode=Markdown"
+              exit 0
+            fi
+            sleep 10
+          done
+          MSG="❌ Таймаут: LoadBalancer не выдал IP за 5 минут"
+          curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
+            -d "chat_id=${TELEGRAM_CHAT_ID}&text=${MSG}&parse_mode=Markdown"
+          exit 1
